# vEEi0c2qpo

./: .gitignore  Cargo.toml  README.md  build.rs
src/: main.rs
src/common/: config.rs  mod.rs
src/exchange/: binance.rs  bitstamp.rs  mod.rs
src/merger/: mod.rs
src/rpc/: server.rs
tests/: binance_order_book_message.json  bitstamp_order_book_message.json
