[package]
name = "order-book-merger"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.19"
async-trait = "0.1.52"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
url = "2.2.2"
tokio-tungstenite = { version = "0.16.1", features = ["native-tls"] } # Websockets
