[package]
name = "order-book-merger"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "2.34.0"
itertools = "0.10.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.8"
futures-util = "0.3.19"
async-trait = "0.1.52"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
url = "2.2.2"
tokio-tungstenite = { version = "0.16.1", features = ["native-tls"] } # Websockets
tonic = "0.6.2"
prost = "0.9.0"

[build-dependencies]
tonic-build = "0.6.2"